--- a/src/App.css
+++ b/src/App.css
@@ -3,34 +3,15 @@
 }
 
 .app {
-  display: flex;
-  background-color: #dadbd3;
-  height: 100vh;
-  text-align: center;
-}
-.app__body {
+  margin-top: 20px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  background-color: #ededed;
-  height: 90vh;
-  width: 100%;
-  box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
-.app__title {
-  display: flex;
-  justify-content: center;
-}
-.app__score {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 50px;
-}
-table,
-th,
-td {
-  border: 2px solid red;
-  border-collapse: collapse;
+.app__imgPaper {
+  object-fit: contain;
+  height: 150px;
+  width: 100px;
 }
